<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp"
    tools:context=".MainsMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:fontFamily="cursive"
        android:text="@string/restaurant_name"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/font_xx_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:fontFamily="cursive"
        android:text="@string/mains"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/font_large"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/beige"
        android:padding="@dimen/dimen_8dp"
        app:cardCornerRadius="@dimen/dimen_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--// ================ MAIN ITEM 1 =====================-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:backgroundTint="@color/light_brown"
                app:cardCornerRadius="@dimen/dimen_16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    android:paddingBottom="@dimen/dimen_4dp">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/main_image_cardView_1"
                        android:layout_width="@dimen/dimen_96dp"
                        android:layout_height="@dimen/dimen_96dp"
                        app:cardCornerRadius="@dimen/dimen_16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/main_image_item_1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            android:contentDescription="@string/image_description_main_1"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pie_mash" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/main_title_item_1"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/title_main_1"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/main_image_cardView_1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_info_item_1"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/info_main_1"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/main_title_item_1"
                        app:layout_constraintTop_toBottomOf="@+id/main_title_item_1" />

                    <TextView
                        android:id="@+id/main_price_item_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:text="@string/price_main_1"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_small"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/main_title_item_1"
                        app:layout_constraintTop_toBottomOf="@+id/main_info_item_1" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <!--// ================ MAIN ITEM 2 =====================-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:backgroundTint="@color/light_brown"
                app:cardCornerRadius="@dimen/dimen_16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    android:paddingBottom="@dimen/dimen_4dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/main_image_cardView_2"
                        android:layout_width="@dimen/dimen_96dp"
                        android:layout_height="@dimen/dimen_96dp"
                        app:cardCornerRadius="@dimen/dimen_16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/main_image_item_2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            android:contentDescription="@string/image_description_main_2"
                            android:scaleType="centerCrop"
                            android:src="@drawable/fish_chips" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/main_title_item_2"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/title_main_2"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/main_image_cardView_2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_info_item_2"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/info_main_2"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/main_title_item_2"
                        app:layout_constraintTop_toBottomOf="@+id/main_title_item_2" />

                    <TextView
                        android:id="@+id/main_price_item_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:text="@string/price_main_2"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_small"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/main_title_item_2"
                        app:layout_constraintTop_toBottomOf="@+id/main_info_item_2" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <!--// ================ MAIN ITEM 3 =====================-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_brown"
                app:cardCornerRadius="@dimen/dimen_16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:paddingEnd="@dimen/dimen_8dp"
                    android:paddingBottom="@dimen/dimen_4dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/main_image_cardView_3"
                        android:layout_width="@dimen/dimen_96dp"
                        android:layout_height="@dimen/dimen_96dp"
                        app:cardCornerRadius="@dimen/dimen_16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/main_image_item_3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gray"
                            android:contentDescription="@string/image_description_main_3"
                            android:scaleType="centerCrop"
                            android:src="@drawable/hamburger" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/main_title_item_3"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/title_main_3"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/main_image_cardView_3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_info_item_3"
                        android:layout_width="@dimen/dimen_0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        android:text="@string/info_main_3"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_medium"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/main_title_item_3"
                        app:layout_constraintTop_toBottomOf="@+id/main_title_item_3" />

                    <TextView
                        android:id="@+id/main_price_item_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:text="@string/price_main_3"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/font_small"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/main_title_item_3"
                        app:layout_constraintTop_toBottomOf="@+id/main_info_item_3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>